[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "flet[all]==0.80.1",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
